--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="intro">se prepare, nosso site está quase pronto</div>  
-  <div class="name">SAÚDE MENTAL</div>
+  <div class="intro">se prepare,<span> nosso site </span> está quase pronto</div>  
+  <div class="name"><span>SAÚDE MENTAL</sapan></div>
   <div class="slogan">Cuidar da sua saúde mental é um ato de amor-próprio.</div>
-  <div class="informative">Saiba mais</div>
+
+<div class="container">
+
+<div class="op1">Saiba mais</div>
+
+<div class="op2"> <b>Em breve um </b>novo <b>site!</b></div>
+
+</div>
+    <div class="end">Colégio Estadual Professora Dirce Celestino do Amaral
+
+
+
 </body>
 </html>
